--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
       "email": "causch@gmx.de"
     }
   ],
-  "homepage": "https://github.com/ioBroker/ioBroker.network",
+  "homepage": "https://github.com/Causch/ioBroker.network",
   "license": "MIT",
   "keywords": [
     "ioBroker",
@@ -22,7 +22,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ioBroker/ioBroker.network"
+    "url": "https://github.com/Causch/ioBroker.network"
   },
   "dependencies": {},
   "devDependencies": {
@@ -35,7 +35,7 @@
     "test": "node node_modules/mocha/bin/mocha --exit"
   },
   "bugs": {
-    "url": "https://github.com/ioBroker/ioBroker.network/issues"
+    "url": "https://github.com/Causch/ioBroker.network/issues"
   },
   "readmeFilename": "README.md"
 }
